packages added (controller)

--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#e1e8ec"
-    tools:context=".ChooseAct">
+    tools:context=".controller.ChooseAct">
 
     <TextView
         android:id="@+id/textView2"
