--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#4c5175</color>
     <color name="colorPrimaryDark">#2f324a</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#96eacc</color>
 </resources>
