--- a/app/src/main/res/layout/activity_info_voiture.xml
+++ b/app/src/main/res/layout/activity_info_voiture.xml
@@ -45,7 +45,7 @@
             android:layout_marginTop="24dp"
             android:autofillHints=""
             android:ems="10"
-            android:hint="[ 00000-?-n ]"
+            android:hint="(e.g., 00000-?-n )"
             android:inputType="textPersonName"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,7 +72,7 @@
             android:layout_marginTop="24dp"
             android:autofillHints=""
             android:ems="10"
-            android:hint="(e.g., 12/11/2019 - 13h30)"
+            android:hint="(e.g., Renault Megane 4)"
             android:inputType="textPersonName"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +85,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:text="@string/nombre_de_places_ndisponibles"
+            android:text="@string/nombre_de_places_voiture"
+            android:textAlignment="center"
             android:textColor="#4C5175"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -99,8 +100,8 @@
             android:layout_marginTop="24dp"
             android:autofillHints=""
             android:ems="10"
-            android:hint="(e.g., 3)"
-            android:inputType="textPersonName"
+            android:hint="(e.g., 5)"
+            android:inputType="number"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
