--- a/app/src/main/res/layout/activity_annonce_covoiture_form.xml
+++ b/app/src/main/res/layout/activity_annonce_covoiture_form.xml
@@ -90,13 +90,23 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ed_point_depart" />
 
+        <Button
+            android:id="@+id/bt_tps_dep1"
+            android:layout_width="108dp"
+            android:layout_height="41dp"
+            android:text="@string/choisir"
+            android:backgroundTint="@color/colorAccent"
+            app:layout_constraintBottom_toTopOf="@+id/ed_temps_depart"
+            app:layout_constraintEnd_toStartOf="@+id/bt_tps_arr1"
+            app:layout_constraintHorizontal_bias="0.254"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_temps_depart" />
+
         <EditText
             android:id="@+id/ed_temps_depart"
             android:layout_width="164dp"
             android:layout_height="40dp"
-            android:autofillHints=""
             android:ems="10"
-            android:hint="(e.g., 12/11/2019 - 13h30)"
             android:inputType="textPersonName"
             android:textSize="12sp"
             app:layout_constraintBaseline_toBaselineOf="@+id/ed_temps_arrivee"
@@ -115,15 +125,25 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ed_point_arrivee" />
 
+        <Button
+            android:id="@+id/bt_tps_arr1"
+            android:layout_width="108dp"
+            android:layout_height="41dp"
+            android:text="@string/choisir"
+            android:backgroundTint="@color/colorAccent"
+            app:layout_constraintBottom_toTopOf="@+id/ed_temps_arrivee"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.706"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_temps_arrivee" />
+
         <EditText
             android:id="@+id/ed_temps_arrivee"
             android:layout_width="164dp"
             android:layout_height="40dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="28dp"
-            android:autofillHints=""
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="32dp"
             android:ems="10"
-            android:hint="(e.g., 12/11/2019 - 13h40)"
             android:inputType="textPersonName"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -148,7 +168,7 @@
             android:autofillHints=""
             android:ems="10"
             android:hint="(e.g., 3)"
-            android:inputType="textPersonName"
+            android:inputType="number"
             android:textSize="12sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
