ajout de Connexion, Inscription et Reinitialisation mot de passe

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#4c5175</color>
     <color name="colorPrimaryDark">#2f324a</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="btn_color">#96eacc</color>
+    <color name="gris">#e1e8ec</color>
+    <color name="facebook">#3a579d</color>
 </resources>
