--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,10 @@
 <resources>
     <color name="colorPrimary">#4c5175</color>
     <color name="colorPrimaryDark">#2f324a</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#96eacc</color>
     <color name="btn_color">#96eacc</color>
     <color name="gris">#e1e8ec</color>
-    <color name="facebook">#3a579d</color>
+    <color name="facebook">#6A738A</color>
+    <color name="grey">#e1e8ec</color>
+    <color name="white">#FFFFFF</color>
 </resources>
